tests/src/frontend/syntax/invalid/duplicate_field_method.sk
class C(m: Int) {
  fun m(): String {
    ""
  }
}

fun main(): void {
  print_raw("Fail")
}
